--- a/app/src/main/res/layout/activity_customer_history.xml
+++ b/app/src/main/res/layout/activity_customer_history.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_margin="40dp"
     android:orientation="vertical"
     tools:context=".CustomerHistoryActivity">
 
@@ -11,15 +12,17 @@
         android:id="@+id/textView4"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="TextView" />
+        android:text="History" />
 
     <ListView
+        android:id="@+id/listHistory_customer"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_weight="1" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/btKembali_customer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Button" />
+        android:text="Kembali" />
 </LinearLayout>
